<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>loki_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for Loki AUV — sim and real hardware.</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>loki_control</exec_depend>
  <exec_depend>loki_hardware</exec_depend>
  <exec_depend>loki_monitor</exec_depend>
  <exec_depend>ros_tcp_endpoint</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
