<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>loki_hardware</name>
  <version>0.1.0</version>
  <description>
    hardware bridge for loki auv.
    hw_bridge.py relays /cmd/* to ESP32 via micro-ROS.
  </description>
  <maintainer email="bolin@bolin.com">Your Name</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
